Update with better Accessiblity

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -14,22 +14,22 @@
 </head>
 <body>
 
-  <div class="container bg--color-light-gray">
+  <main class="container bg--color-light-gray" role="main">
     <div class="card card--shadow-sm bg--color-white border--r-20">
         <img src="./images/image-qr-code.png" alt="" class="card__image border--r-10">
 
-        <p class="card__title">
+        <h1 class="card__title" >
           Improve your front-end skills by building projects
-        </p>
+        </h1>
         <p class="card__desc">
           Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
         </p>
     </div>
-  </div>
+  </main>
   
-  <div class="footer">
+  <footer role="contentinfo" class="footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded with ❤️ by <a href="https://viceodev.tech">Viceodev</a>.
-  </div>
+  </footer>
 </body>
 </html>
